Bug 430536 - OSD does not show volume level above 100% while the screen is locked
Summary: OSD does not show volume level above 100% while the screen is locked
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-18 10:49 UTC by Patrick Silva
Modified: 2023-04-27 19:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-12-18 10:49:49 UTC
STEPS TO REPRODUCE
1. click on sound icon in the system tray and check "Raise maximum volume"
2. set volume level to 100%
3. play some audio
4. lock your screen
5. increase the volume level

OBSERVED RESULT
the volume level increases but OSD is still showing 100%

EXPECTED RESULT
OSD should show volume level above 100% while the screen is locked

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-03-09 04:52:33 UTC
Fixed in Plasma 5.21.
Comment 2 Patrick Silva 2021-03-09 13:46:30 UTC
it's still reproducible at least on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 3 Kai Uwe Broulik 2021-03-09 15:05:17 UTC
Confirmed, there is no mention of maxValue in all of kscreenlocker. The logic isn't wired up there at all.
Comment 4 Nate Graham 2021-03-09 15:49:47 UTC
Oops yeah, I was testing wrong.
Comment 5 Bharadwaj Raju 2022-10-26 13:09:16 UTC
The lock screen relies on signals from osdService to display its own OSDs. But those signals don't have any information about max percentage. Adding a max percent parameter to the osdProgress signal would mean breaking the DBus API (because as far as I know, DBus doesn't have overloads or default values so existing users would break). So a proper solution would need to wait for KDE 6 I think.

As a hack in the meantime we can assume that the max is 150 if the value is >100.
Comment 7 Bharadwaj Raju 2022-10-26 20:58:47 UTC
Git commit f35d5ba4bafb12c00608d6a7141cc522f2d4c790 by Bharadwaj Raju.
Committed on 26/10/2022 at 20:58.
Pushed by bharadwaj-raju into branch 'master'.

Workaround: assume max percent is 150 if percent is >100 in OSD

Proper solution seems like it'll need to wait for KF6.

M  +4    -0    greeter/greeterapp.cpp

https://invent.kde.org/plasma/kscreenlocker/commit/f35d5ba4bafb12c00608d6a7141cc522f2d4c790
Comment 8 Patrick Silva 2022-11-13 19:26:40 UTC
This bug is still reproducible on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.7
Graphics Platform: Wayland
Comment 9 Bharadwaj Raju 2022-11-14 04:38:37 UTC
Don't know how that happened... Make sure you're actually raising volume above 100. Even if raise max volume is enabled but current volume is <= 100, the lockscreen OSD will show the slider going upto 100 only, and this is expected behavior for now.
Comment 10 Bharadwaj Raju 2022-11-14 04:40:56 UTC
(There is another bug I notice where the volume keys seem to straight up not change the volume sometimes when in the lock screen, maybe this is another confounding factor)
Comment 11 Nate Graham 2023-04-27 19:22:05 UTC
This has been fixed for good in Plasma 6.