Workaround: assume max percent is 150 if percent is >100 in OSD

Proper solution seems like it'll need to wait for KF6.

BUG: 430536